更新terrain 同步腳本 prefab

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,20 @@
+\*
+!\Assets\Script\*
+!\Assets\Prefabs\*
+!\Assets\Scenes\*
+!\Assets\Terrain\*
+!\Assets\Material\*
+!\Packages\*
+!\ProjectSettings\*
+!\.gitignore
+!\BlenderModel\*
 /*
-!/Assets/Script
-!/Assets/Prefabs
-!/Assets/Scenes
-!/Assets/Terrain
-!/Assets/Material
-!/Packages
-!/ProjectSettings
+!/Assets/Script/*
+!/Assets/Prefabs/*
+!/Assets/Scenes/*
+!/Assets/Terrain/*
+!/Assets/Material/*
+!/Packages/*
+!/ProjectSettings/*
 !/.gitignore
-!/BlenderModel
+!/BlenderModel/*
