modify ignore file & sync up weapon data

--- a/.gitignore
+++ b/.gitignore
@@ -2,22 +2,22 @@
 *.csproj
 *.sln
 .vsconfig
-!Assets
-!Assets/Script
-!Assets/Script/*
-!Assets/Prefabs
-!Assets/Prefabs/*
-!Assets/Scenes
-!Assets/Terrain
-!Assets/Terrain/*
-!Assets/Material
-!Assets/Material/*
-!Assets/URP
-!Assets/TerrainLayers
-!Assets/TerrainLayers/*
-!Packages
-!ProjectSettings
+!Assets/
+!Assets/Script/
+!Assets/Script/**
+!Assets/Prefabs/
+!Assets/Prefabs/**
+!Assets/Scenes/
+!Assets/Terrain/
+!Assets/Terrain/**
+!Assets/Material/
+!Assets/Material/**
+!Assets/URP/
+!Assets/TerrainLayers/
+!Assets/TerrainLayers/**
+!BlenderModel/
+!BlenderModel/**
+!Packages/
+!ProjectSettings/
 !.gitignore
-!BlenderModel
-!BlenderModel/*
 **.meta
