--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,19 @@
 *.sln
 .vsconfig
 !Assets/
-!Assets/Script/
+!Assets/Script
+!Assets/Script.meta
 !Assets/Script/**
-!Assets/Prefabs/
+!Assets/Prefabs
+!Assets/Prefabs.meta
 !Assets/Prefabs/**
 !Assets/Scenes/
-!Assets/Terrain/
+!Assets/Terrain
 !Assets/Terrain/**
-!Assets/Material/
+!Assets/Material
 !Assets/Material/**
 !Assets/URP/
-!Assets/TerrainLayers/
+!Assets/TerrainLayers
 !Assets/TerrainLayers/**
 !BlenderModel/
 !BlenderModel/**
